fix null,date returns from db.eval SERVER-151